--- a/src/components/Board/Board.module.scss
+++ b/src/components/Board/Board.module.scss
@@ -3,13 +3,12 @@
 }
 
 .board-wrapper {
-	width: 540px;
-	height: 540px;
-	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .row {
-	width: 100%;
 	display: flex;
 	justify-items: center;
 }
